deployment/kubernetes/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yago
  labels:
    name: yago
    app: yago
    environment: production
